winpriv.h was moved from hw/xwin to hw/xwin/glx in November
hw/xwin/Makefile.am was referencing this instead of hw/xwin/glx/Makefile.am

Signed-off-by: Keith Packard <keithp@keithp.com>
Reviewed-by: Julien Cristau <jcristau@debian.org>

--- a/hw/xwin/glx/Makefile.am
+++ b/hw/xwin/glx/Makefile.am
@@ -2,6 +2,7 @@ noinst_LTLIBRARIES = libXwinGLX.la
 
 libXwinGLX_la_SOURCES = \
 	winpriv.c \
+	winpriv.h \
 	glwindows.h \
 	glwrap.c \
 	indirect.c \
