--- a/xorg-server.pc.in
+++ b/xorg-server.pc.in
@@ -15,6 +15,6 @@ abi_extension=@abi_extension@
 Name: xorg-server
 Description: Modular X.Org X Server
 Version: @PACKAGE_VERSION@
-Requires: pixman-1 pciaccess
+Requires: pixman-1 pciaccess xproto >= 7.0.17
 Cflags: -I${sdkdir} @symbol_visibility@
 Libs: -L${libdir}
