Use DocBook stylesheets from xorg-sgml-doctools if they're available
Bumps minimum xorg-macros requirement from 1.6 to 1.10

Signed-off-by: Alan Coopersmith <alan.coopersmith@oracle.com>
Reviewed-by: Patrick E. Kane <pekane52@gmail.com>

--- a/doc/xml/xmlrules.in
+++ b/doc/xml/xmlrules.in
@@ -39,6 +39,14 @@ SUFFIXES = .xml .txt .html .pdf
 XML_ENT_DIR = $(abs_top_builddir)/doc/xml
 XMLTO_FLAGS = --searchpath $(XML_ENT_DIR)
 
+if HAVE_STYLESHEETS
+XMLTO_FLAGS += -m $(XSL_STYLESHEET)
+BUILT_DOC_FILES += xorg.css
+
+xorg.css: $(STYLESHEET_SRCDIR)/xorg.css
+	$(AM_V_GEN)cp -pf $(STYLESHEET_SRCDIR)/xorg.css $@
+endif
+
 if HAVE_XMLTO
 BUILT_DOC_FILES += $(TXT_FILES)
 .xml.txt:
@@ -59,7 +67,7 @@ endif
 
 endif
 
-CLEAN_DOC_FILES = $(TXT_FILES) $(HTML_FILES) $(PDF_FILES)
+CLEAN_DOC_FILES = $(TXT_FILES) $(HTML_FILES) $(PDF_FILES) xorg.css
 
 # All the files we build depend on the entities
 $(BUILT_DOC_FILES): $(XML_ENT_DIR)/xserver.ent
