Add documentation of the Xserver DTrace probes
Mostly pulled together from posts to my blog and the docs posted
at http://people.freedesktop.org/~alanc/dtrace/ and converted to
DocBook.

Signed-off-by: Alan Coopersmith <alan.coopersmith@oracle.com>
Reviewed-by: Patrick E. Kane <pekane52@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -2183,6 +2183,7 @@ dbe/Makefile
 dix/Makefile
 doc/Makefile
 doc/xml/Makefile
+doc/xml/dtrace/Makefile
 doc/xml/xserver.ent
 fb/Makefile
 record/Makefile
