--- a/hw/xwin/Makefile.am
+++ b/hw/xwin/Makefile.am
@@ -162,7 +162,8 @@ AM_YFLAGS = -d
 AM_LFLAGS = -i
 AM_CFLAGS = -DHAVE_XWIN_CONFIG_H $(DIX_CFLAGS) \
             $(XWINMODULES_CFLAGS) \
-            -I$(top_srcdir)
+            -I$(top_srcdir) \
+            -Wno-bad-function-cast
 
 MAN_SRCS = XWin.man.pre XWinrc.man.pre
 
